# discrete-vortices

./: .gitignore  CMakeLists.txt
MainExec/: CMakeLists.txt  main.cpp
MdvProfiles/: CMakeLists.txt
MdvProfiles/include/: Environment.h  GeneralVariables.h  Mdv.h  Platform.h  Printing.h  Statistic.h  mdv.h
MdvProfiles/src/: Mdv.cpp  Platform.cpp  Printing.cpp  Statistic.cpp  mdv.cpp
ZhukovskyGenerator/: CMakeLists.txt
ZhukovskyGenerator/include/: Point.h  Profile.h  ProfileFileManager.h  ProfileGenerator.h  generator.h  profile.h
ZhukovskyGenerator/src/: Point.cpp  Profile.cpp  ProfileFileManager.cpp  ProfileGenerator.cpp  generator.cpp  main.cpp  profile.cpp
profiles/: new_profile.txt  zhukovsky-03+2.txt  zhukovsky-05+1.txt  zhukovsky-1+05.txt  zhukovsky-1+3.txt  zhukovsky-10.txt  zhukovsky-20.txt
src/: main.cpp
